force-app/main/default/objects/Display_Configuration__c/Display_Configuration__c.object-meta.xml
<CustomObject>
    <label>Display Configuration</label>
    <nameField>
        <label>Display Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Display Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>