force-app/main/default/objects/Display_Configuration__c/fields/Condition_Group__c.field-meta.xml
<CustomField>
    <fullName>Condition_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Condition Group</label>
    <referenceTo>Condition_Group__c</referenceTo>
    <relationshipLabel>Display Configurations</relationshipLabel>
    <relationshipName>Display_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>