force-app/main/default/objects/Display_Configuration__c/fields/Display_Label__c.field-meta.xml
<CustomField>
    <fullName>Display_Label__c</fullName>
    <label>Display Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>