force-app/main/default/objects/Display_Configuration__c/fields/LWC_Component_Name__c.field-meta.xml
<CustomField>
    <fullName>LWC_Component_Name__c</fullName>
    <label>LWC Component Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>