force-app/main/default/objects/Display_Configuration__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>Display Configurations</relationshipLabel>
    <relationshipName>Display_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>